[project]
name = "uas-bi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.4.3",
    "minio>=7.2.20",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "requests>=2.32.5",
    "s3fs>=2025.12.0",
    "streamlit>=1.52.2",
]
